@@ -58,6 +58,7 @@ export(getVar)
 export(getow)
 export(imputeByAge)
 export(initiateRstoxEnv)
+export(is.empty)
 export(isProject)
 export(isProjectZipURL)
 export(jBoolean)
@@ -80,6 +81,7 @@ export(readXMLfiles)
 export(reopenProject)
 export(reportAbundance)
 export(reportAbundanceAtLevel)
+export(reportTotalCatch)
 export(resetProject)
 export(runBaseline)
 export(runBootstrap)
